--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,4 +26,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: nyaone/nyaspeed:latest
+          tags: nyawork/nyaspeed:latest
