--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3.3"
 services:
   nyaspeed:
     restart: always
-    image: nyaone/nyaspeed
+    image: nyawork/nyaspeed
     #build: .
     volumes:
       - "./settings.toml:/app/settings.toml:ro"
-      - "./GeoLite2-City.mmdb:/app/GeoLite2-City.mmdb:ro"
+      - "./GeoIP2-City.mmdb:/app/GeoIP2-City.mmdb:ro"
     ports:
-      - "8989:8989"
+      - "127.0.0.1:8989:8989"
